<resources>
    <string name="app_name">Gestor de Incentivos</string>
    <string name="ingreso">Ingresos</string>
    <string name="inicio">Inicio</string>
    <string name="cuenta">Cuenta</string>
    <string name="meta">Meta:</string>
    <string name="ganancia">Ganancias: </string>
    <string name="modificacion">Modificar Meta </string>
    <string name="guardar">guardar</string>
    <string name="ant_dia">Dia anterior</string>
    <string name="pos_dia">Dia posterior</string>
    <string name="personalDate_name">titulo</string>
    <string name="buttonGuardar">guardar</string>
    <string name="buttonPrevio">Regresar</string>





</resources>
